Fixed issue with menu links overlaying form on smaller window sizes.

--- a/server/public/styles/home.css
+++ b/server/public/styles/home.css
@@ -63,11 +63,13 @@ body {
 }
 
 .footer {
-	position: absolute;
+	display:block;
+/*	position: absolute;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	padding-bottom: 20%;
+	*/
 }
 
 .footer2 {
